syntax = "proto3";
package pb;

message UserFullName {
  string firstName = 1;
  string lastName = 2;
}

message UserRequest {
  UserFullName user = 1;
}

message UserResponse {
  string message = 1;
}  

service GreetService {
  rpc sayHello(UserRequest) returns (UserResponse) {}
}